--- a/abstract.tex
+++ b/abstract.tex
@@ -18,8 +18,8 @@ We test our approach on OpenCL, automatically exposing bugs in OpenCL compilers 
 %
 submitting XX bug reports.
 %
-Our test cases are on average two orders of magnitude smaller than the state-of-the-art, require $3.03\times$ less time to generate and evaluate, and expose bugs which have not been found using existing techniques. Our system took 14 hours to train for OpenCL comprising only 500 lines of code, versus the state of the art taking 9 man months to port from a generator for C and 37,000 lines of code.
-%\cc{TODO: complimentary approach}
+Our test cases are on average two orders of magnitude smaller than the state-of-the-art, require $3.03\times$ less time to generate and evaluate, and expose bugs which have not been found using existing techniques. Our random program generator, comprising only 500 lines of code, took 14 hours to train for OpenCL versus the state-of-the-art taking 9 man months to port from a generator for C totaling 50,000 lines of code.
+% find CLSmith/src -name '*.cpp' -o '*.h' | xargs wc -l  # 49775
 
 %Compilers should produce correct code for valid inputs, and produce meaningful errors when inputs are invalid. Fixed test-suites and formal verification techniques cannot ensure these properties over the enormous range of possible inputs and complexity of optimizing compilers, leading to the development of random program generators that attempt to find compiler bugs by comparing the outputs of programs across compilers.
 
