--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -1,5 +1,5 @@
 \section{Introduction}\label{sec:intro}
-
+\hl{Check all is in US spelling.}
 %\cc{Chris comment}
 %\pp{Pavlos comment}
 %\am{Alastair comment}
@@ -10,12 +10,12 @@ Compilers are a fundamental, trusted technology. Bugs in them are particularly h
 
 %Compilers are a fundamental trusted technology. Bugs in them are particularly harmful. They can introduce extremely hard to identify errors in the generated binary. If we detect them early, this just increases development costs. If not, this can cause runtime failures in even carefully tested software. Identifying such bugs before compiler release is of critical importance but is not a straightforward task. Modern optimizing compilers are large and complex programs; fixed test suites are inadequate for ensuring correct behavior over the broad range of possible inputs. \am{It's not just broad, it's infinite, though I don't know if the distinction matters for the paper.}-
 
-Random test case generation --- \emph{fuzzing} --- is a well established and effective method for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes in the compiler are easy to detect, determining that programs are correctly compiled is not generally possible without either developer provided validation for the particular program's behavior or a gold standard compiler from which to create reference outputs. In the absence of those, the we can employ Differential Testing~\cite{??}. The generated code and a set of inputs form the \emph{test case}, which is compiled and executed on multiple \emph{testbeds}. If the test case should have deterministic behavior, but the output differs between testbeds, then a bug has been discovered.
+Random test case generation --- \emph{fuzzing} --- is a well established and effective method for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes in the compiler are easy to detect, determining that programs are correctly compiled is not generally possible without either developer provided validation for the particular program's behavior or a gold standard compiler from which to create reference outputs. In the absence of those, we can employ Differential Testing~\cite{McKeeman1998}. The generated code and a set of inputs form the \emph{test case} which is compiled and executed on multiple \emph{testbeds}. If the test case should have deterministic behavior, but the output differs between testbeds, then a bug has been discovered.
 
 %Compiler fuzzing boils down to efficiently generating test cases that trigger compiler bugs. 
-The state of the art approach, CSmith~\cite{Yang2011}, generates large random programs by defining and sampling a probabilistic grammar which covers a large subset of the C programming language. Through this grammar, CSmith ensures that the generated code easily passes the compiler front-end and stresses the most complex part of the compiler, the middle end. A complex static and dynamic analysis makes sure that programs are free from undefined behavior. The programs are then differentially tested.
+The state of the art approach, CSmith~\cite{Yang2011}, generates large random programs by defining and sampling a probabilistic grammar which covers a large subset of the C programming language. Through this grammar, CSmith ensures that the generated code easily passes the compiler front-end and stresses the most complex part of the compiler, the middle end.  Complex static and dynamic analyses make sure that programs are free from undefined behavior. The programs are then differentially tested.
 
-While CSmith has been successfully used to identify hundreds of bugs in compilers, it and similar approaches have a significant drawback. They represent a huge undertaking and require a thorough understanding of the target programming language. CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered for each new target language. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} --- a superficially simple task --- took 9 months and 8k lines of code. Given the difficulty of defining a new grammar, typically only a subset of the language is implemented.
+While CSmith has been successfully used to identify hundreds of bugs in compilers, it and similar approaches have a significant drawback. They represent a huge undertaking and require a thorough understanding of the target programming language. CSmith was developed over the course of years, and consists of over 41k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered for each new target language. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} --- a superficially simple task --- took 9 months and 8k lines of code. Given the difficulty of defining a new grammar, typically only a subset of the language is implemented.
 
 
 %Differential Testing is an effective and widely studied methodology for identifying compiler bugs. %Figure~\ref{fig:difftest} shows the approach.
@@ -85,8 +85,8 @@ We make the following contributions:
 \begin{itemize}
 \item a novel, automatic, and fast approach for the generation of expressive random programs for compiler fuzzing. We \emph{infer} programming language syntax, structure, and use from real-world examples, not through an expert-defined grammar. Our system needs two orders of magnitude less code than the state of the art, and takes less than a day to train; % CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
 
-\item we discover a similar number of bugs as the state of the art, but also found bugs which prior work did not, covering more components of the compiler;
+\item we discover a similar number of bugs as the state of the art, but also find bugs which prior work did not, covering more components of the compiler;
 % e.g. ill-formed
 
-\item in modeling real handwritten code, our test cases are more interpretable than other approaches. Average test case size is two orders of magnitude smaller than state-of-the-art, without any expensive reduction process;
+\item in modeling real handwritten code, our test cases are more interpretable than other approaches. Average test case size is two orders of magnitude smaller than state-of-the-art, without any expensive reduction process.
 \end{itemize}
