--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -1,8 +1,8 @@
 \section{Experimental Setup}
-
+\hl{
 In this section we describe the particular experimental parameters used.
 
-\subsection{Platforms}
+\subsection{OpenCL Systems}
 
 \begin{table*}[t!]
   \scriptsize %
@@ -10,14 +10,19 @@ In this section we describe the particular experimental parameters used.
   % \rowcolors{2}{white}{gray!25}
   \input{build/tab/platforms}
   \caption{%
-    OpenCL platforms, the time spent in automated testing, and the number of bug reports submitted to date. \cc{refresh bugs submitted}%
+    OpenCL systems, the time spent in automated testing, and the number of bug reports submitted to date. \cc{refresh bugs submitted}%
   }
   \label{tab:platforms}
 \end{table*}
 
-We conducted testing of 10 OpenCL platforms, summarized in Table~\ref{tab:platforms}. Each testbed consists of a \emph{<device, driver>} pair. We covered a broad range of hardware: 3 GPUs, 4 CPUs, a co-processor, and an emulator. 7 of the compilers tested are commercial products, 3 of them are open source. Our suite of platforms includes both combinations of different drivers for the same device, and different devices using the same driver.
+We conducted testing of 10 OpenCL systems, summarized in Table~\ref{tab:platforms}.  We covered a broad range of hardware: 3 GPUs, 4 CPUs, a co-processor, and an emulator. 7 of the compilers tested are commercial products, 3 of them are open source. Our suite of systems includes both combinations of different drivers for the same device, and different devices using the same driver.
 
 \subsection{Testbeds}
-%HJL - Not sure if this is correct - if it is, ain't in the tables. So probably not.}
-\hl{For each platform, we create multiple testbeds by various combinations of the following settings: running with or without compiler optimizations; running with a single thread or running with 2048 threads.}
-%HJL alt- For each platform, we create two testbeds by either running with or without compiler optimizations.
+For each OpenCL system, we create two testbeds. In the first, the compiler is run without optimization. In the second, optimizations are enabled. Each testbed is then a triple, consisting of \emph{<device, driver, is\_optimized>} settings. This mechanism gives 20 testbeds to evaluate.
+
+\subsection{Test Cases}
+For each generated program we create inputs as described in Section~\ref{sec:test-harness}. In addition, we need to chose the number of threads to use. We generate two test cases, one using one thread, the other using 2048 threads. A test case is then a triple, consisting of \emph{<program, inputs, threads>} settings.
+
+\subsection{Bug Search Time Allowance}
+We compare both our fuzzer and CLSmith. We allow both to run for 48 hours on each of the 20 testbeds.  CLSmith used its default configuration. The total runtime for a test case consists of the generation and execution time.
+}
